make PWA installable

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="manifest" href="manifest.webmanifest" />
 		<title>Calculator</title>
 		<link
 			rel="icon"
@@ -33,7 +34,19 @@
 			name="msapplication-TileImage"
 			content="src/static/images/icons/icon-144x144.png"
 		/>
-		<meta name="msapplication-TileColor" content="#18587b" />
+    <meta name="msapplication-TileColor" content="#18587b" />
+    <script>
+      if ('serviceWorker' in navigator) {
+        const x = 'sw.js';
+        navigator.serviceWorker.register(x)
+          .then(function(registration) {
+            console.log('Registration successful, scope is:', registration.scope);
+          })
+          .catch(function(error) {
+            console.log('Service worker registration failed, error:', error);
+          });
+      }
+    </script>
 	</head>
 	<body>
 		<noscript>
