--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="A Simple & Fast Calculator PWA"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="manifest" href="manifest.webmanifest" />
-		<title>Calculator</title>
+		<title>BasicCalc</title>
 		<link
 			rel="icon"
 			type="image/png"
@@ -26,7 +26,7 @@
 		<!-- Add to home screen for Safari on iOS -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<meta name="apple-mobile-web-app-title" content="calculator" />
+		<meta name="apple-mobile-web-app-title" content="BasicCalc" />
 		<link
 			rel="apple-touch-icon"
 			href="src/static/images/icons/icon-152x152.png"
